syntax = "proto3";

package post;

service PostService {
  rpc getPosts (Empty) returns (PostList);
  rpc getPostById (PostDetailRequest) returns (Post);
  rpc createPost (CreatePostRequest) returns (Post);
  rpc updatePost (Post) returns (Post);
  rpc deletePost (DeletePostRequest) returns (Post);

  rpc getPostComments (PostCommentsRequest) returns (CommentList);
  rpc createComment (CreateCommentRequest) returns (Comment);
}

message Empty {}

// Posts
message PostDetailRequest {
    string id = 1;
}

message Post {
  string id = 1;
  string title = 2;
  string image = 3;
  string content = 4;
  string body = 5;
  string createAt = 6;
  string authorId = 7;
  optional Author author = 8;
}

message Author {
  string id = 1;
  string name = 2;
}

message CreatePostRequest {
  string title = 1;
  string image = 2;
  string content = 3;
  string body = 5;
  string authorId = 6;
}

message DeletePostRequest {
    string id = 1;
}

message PostList {
  repeated Post posts = 1;
}

// Comments
message Comment {
    string id = 1;
    string comment = 2;
    string createAt = 3;
    string postId = 4;
  }
  
message PostCommentsRequest {
    string postId = 1;
}

message CreateCommentRequest {
    string comment = 1;
    string postId = 2;
}

message CommentList {
  repeated Comment comments = 1;
}